--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
   },
   "homepage": "https://gitlab.com/js-training1/palautukset/emmadiprasanna/library_api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.0",
+    "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0"
   },
   "type": "module"
 }
